@@ -1,5 +1,13 @@
 2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[v] Overcome PostgreSQL 9.3 "CREATE TABLE .. serial" reticence.
+
+	* basic.scm (test:set-notice-out!-1 cmm): New proc.
+	(test:set-notice-out!-1): Set ‘client_min_messages’
+	to ‘basic1’ around call to ‘tmp-table’.
+
+2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v] Handle PostgreSQL 9.3 config var ‘unix_socket_directories’.
 
 	* fake-cluster-control (1): ...here, via regexp.
